--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=PCF8563_Library
-version=1.0.1
-author=Lewis He
-maintainer=Lewis He <lewishe@outlook.com>
+name=pcf8563-RTC
+version=1.1.0
+author=Chris Dirks (@CDFER)
+maintainer= Chris Dirks (@CDFER)
 sentence=Arduino library for NXP PCF8563 RTC chip.
-paragraph=Arduino library for NXP PCF8563 RTC chip. Tested with ESP32
+paragraph=Arduino library for NXP PCF8563 RTC chip. Writen for the ESP32
 category=Communication
-url=https://github.com/lewisxhe/PCF8563_Library
+url=https://github.com/CDFER/pcf8563-RTC
 architectures=*
